--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -792,6 +792,8 @@ section {
 .portfolio-details .portfolio-info {
   padding: 30px;
   box-shadow: 0px 0 30px rgba(122, 105, 96, 0.08);
+  font-size: 16px;
+  color: rgb(86, 86, 86);
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -800,20 +802,17 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #eee;
+  color: #111;
 }
 
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.portfolio-details .portfolio-info ul li + li {
+.portfolio-details .portfolio-info i {
   margin-top: 10px;
 }
 
 .portfolio-details .portfolio-description {
-  padding-top: 30px;
+  padding: 30px;
+  margin-top: 30px;
+  box-shadow: 0px 0 30px rgba(122, 105, 96, 0.08);
 }
 
 .portfolio-details .portfolio-description h2 {
@@ -824,6 +823,8 @@ section {
 
 .portfolio-details .portfolio-description p {
   padding: 0;
+  text-align: justify;
+  font-size: 14px;
 }
 
 /*--------------------------------------------------------------
