--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -564,7 +564,7 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
-  padding: 30px;
+  padding: 15px;
   position: relative;
   overflow: hidden;
   margin: 0  0 40px 0;
@@ -574,8 +574,24 @@ section {
   border-radius: 15px;
   text-align: left;
   border-bottom: 3px solid #fff;
-  height: 440px;
+  height: 340px;
 }
+@media (min-width: 768px) {
+  .services .icon-box{
+    height:420px;
+  }
+}
+@media (max-width: 767px) {
+  .services .icon-box{
+    height:370px;
+  }
+}
+@media (max-width: 575px) {
+  .services .icon-box{
+    height:310px;
+  }
+}
+
 
 .services .icon-box:hover {
   transform: translateY(-5px);
@@ -592,17 +608,14 @@ section {
 .services .title {
   font-weight: 700;
   margin-bottom: 15px;
-  font-size: 18px;
-}
-
-.services .title a {
-  color: #111;
+  font-size: 16px;
 }
 
 .services .description {
-  font-size: 15px;
+  font-size: 14px;
   line-height: 28px;
   margin-bottom: 0;
+  color: rgb(61, 61, 61);
 }
 .services .link-detail{
   color: black;
@@ -626,6 +639,32 @@ section {
   color: #212529;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
+}
+
+.services .icon-box img{
+  width:100%;
+  height:120px;
+  object-fit: cover;
+}
+@media (min-width: 992px) {
+  .services .icon-box img {
+    height:200px;
+  }
+}
+@media (max-width: 991px) {
+  .services .icon-box img {
+    height:120px;
+  }
+}
+@media (max-width: 767px) {
+  .services .icon-box img {
+    height:150px;
+  }
+}
+@media (max-width: 575px) {
+  .services .icon-box img {
+    height:100px;
+  }
 }
 /*--------------------------------------------------------------
 # Portfolio
@@ -830,6 +869,21 @@ section {
   padding: 0;
   text-align: justify;
   font-size: 14px;
+}
+.portfolio-details img{
+  width: 100%;
+  height:720px;
+  object-fit: cover;
+}
+@media (max-width: 991px) {
+  .portfolio-details img{
+    height:400px;
+  }
+}
+@media (max-width: 767px) {
+  .portfolio-details img{
+    height:300px;
+  }
 }
 
 /*--------------------------------------------------------------
