--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -574,22 +574,7 @@ section {
   border-radius: 15px;
   text-align: left;
   border-bottom: 3px solid #fff;
-  height: 400px;
-}
-@media (min-width: 768px) {
-  .services .icon-box{
-    height:480px;
-  }
-}
-@media (max-width: 767px) {
-  .services .icon-box{
-    height:430px;
-  }
-}
-@media (max-width: 575px) {
-  .services .icon-box{
-    height:380px;
-  }
+  height: max-content;
 }
 
 
@@ -855,7 +840,7 @@ section {
   padding: 30px;
   margin-top: 20px;
   box-shadow: 0px 0 30px rgba(122, 105, 96, 0.08);
-  height: 425px;
+  height: 225px;
 }
 
 .portfolio-details .portfolio-description h2 {
@@ -873,7 +858,7 @@ section {
 }
 .portfolio-details img{
   width: 100%;
-  height:720px;
+  height:520px;
   object-fit: cover;
 }
 @media (max-width: 991px) {
